# capmonstercloud-client-rust

./: Cargo.toml  cargo upgrade & update.bat
.idea_run/: Run test get_balance_async_check.run.xml  Run test hcaptcha_task_proxyless_check.run.xml  Run test image_to_text_task_check.run.xml  Run test no_captcha_task_proxyless_check.run.xml
src/: lib.rs
src/captcha/: mod.rs
src/captcha/data/: mod.rs  request.rs  response.rs
src/captcha/data/tasks/: mod.rs
src/captcha/data/tasks/AmazonTask_mod/: limits.rs  request.rs  response.rs
src/captcha/data/tasks/ComplexImageTask_mod/: limits.rs  request.rs  response.rs
src/captcha/data/tasks/CustomTask/: request.rs  response.rs
src/captcha/data/tasks/CustomTask_mod/: limits.rs  request.rs  response.rs
src/captcha/data/tasks/FunCaptchaTask_mod/: limits.rs  request.rs  response.rs
src/captcha/data/tasks/GeeTestTask_mod/: limits.rs  request.rs  response.rs
src/captcha/data/tasks/HCaptchaTask_mod/: limits.rs  mod.rs  request.rs  response.rs
src/captcha/data/tasks/ImageToTextTask_mod/: limits.rs  mod.rs  modules.rs  request.rs  response.rs
src/captcha/data/tasks/Recaptcha/: request.rs  response.rs
src/captcha/data/tasks/RecaptchaTask_mod/: limits.rs  request.rs  response.rs
src/captcha/data/tasks/TurnstileTask_mod/: limits.rs  mod.rs  request.rs  response.rs
src/captcha/request/: get_task_result_repeater.rs  mod.rs
src/captcha/response/: mod.rs  parse.rs
src/cfg/: limits.rs  mod.rs  urls.rs
src/error/: mod.rs
src/responses/: mod.rs
src/taskmgr/: mod.rs  task.rs  timeouts.rs
src/tests/: alt.rs  hlp.rs  mod.rs
src/tests/rt/: mod.rs
src/tests/rt/server/: logic.rs  mod.rs  responses.rs  verify.rs
src/utils/: mod.rs  user_agent.rs
