[package]
name = "capmonster_cloud_client"
version = "0.0.0"
edition = "2021"
authors = ["ZennoLab<support@zennolab.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "gzip"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_with_macros = "3.8.0"

tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.18"
base64 = "0.22.0"
image = "0.25.1"

[features]
debug-output = ["dep:tracing"]
keep-request-body = []