# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "capmonster_cloud_client"
version = "0.0.0"
edition = "2021"
authors = ["ZennoLab<support@zennolab.com>"]
resolver = "2"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
path="src/lib.rs"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "gzip"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with_macros = "3.9.0"

tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
base64 = "0.22.1"
image = "0.25.2"

[features]
debug-output = ["dep:tracing"]